--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "akeneo/api-php-client": "^9.0",
+        "doctrine/dbal": "^3.4",
         "guzzlehttp/guzzle": "^7.4",
         "laravel/framework": "^9.11",
         "laravel/horizon": "^5.9",
