--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=bb6887a1d34081960564b79359d1313b",
+    "/css/app.css": "/css/app.css?id=3d30d63b7175a5262e184559158aa484"
 }
